--- a/etp/src/app/modules/auth/authhome/authhome.component.scss
+++ b/etp/src/app/modules/auth/authhome/authhome.component.scss
@@ -26,7 +26,7 @@
   padding: calc(50vh - 7%) calc(70vw - 110%) 0;
   .title {
     color: white;
-    font-size: 34px;
+    font-size: 2.2rem;
     line-height: 1.5;
     font-weight: bold;
     span {
