--- a/etp/src/app/modules/dashboard/history/history.component.html
+++ b/etp/src/app/modules/dashboard/history/history.component.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div class="card dash-card shadow">
+    <div class="card dash-card shadow-sm">
       <div class="card-body">
         <div class="bar">
           <div class="row">
