--- a/etp/src/app/modules/dashboard/rules/rules.component.html
+++ b/etp/src/app/modules/dashboard/rules/rules.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div class="container-fluid">
     <h2 class="dash-title">Rules</h2>
-    <div class="card dash-card shadow">
+    <div class="card dash-card shadow-sm">
       <div class="card-body">
         <h4 class="card-title">Title</h4>
         <p class="card-text">Text</p>
