--- a/etp/src/app/modules/home/home/home.component.html
+++ b/etp/src/app/modules/home/home/home.component.html
@@ -57,7 +57,7 @@
           </div>
 
           <div
-            class="line-chart"
+            class="line-charts"
             *ngIf="!(set.isHandset$ | async) && !(set.isTablet$ | async)"
           >
             <img src="/assets/img/Chart.png" alt="charts" class="img-fluid" />
@@ -84,7 +84,7 @@
                 class="img-fluid"
               />
             </div>
-            <div class="dash-card card px-4 py-3 w-75 my-4 ml-auto shadow">
+            <div class="dash-cards card px-4 py-3 w-75 my-4 ml-auto shadow">
               <p class="bar-chart">Active hours</p>
               <img
                 src="/assets/img/active-hours.png"
