--- a/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
@@ -32,7 +32,7 @@
   style="top: calc(40% + 53px);"
 >
   <div class="item text-white">
-    <div class="quota">50.000 <span>IYTECOIN</span></div>
+    <div class="quota">50.000 <span class="text-secondary">IYTECOIN</span></div>
   </div>
 </div>
 <div
@@ -41,7 +41,9 @@
   style="top: calc(40% + 100px);"
 >
   <div class="item">
-    <div class="quota">{{ data?.pv }} <span>KWH</span></div>
+    <div class="quota">
+      {{ data?.pv }} <span class="text-secondary">KWH</span>
+    </div>
   </div>
 </div>
 <div
