--- a/etp/src/app/modules/auth/signin/signin.component.html
+++ b/etp/src/app/modules/auth/signin/signin.component.html
@@ -8,8 +8,8 @@
   <div class="container">
     <div class="form">
       <div class="error d-block w-auto" *ngIf="errorMsg">
-        <div class="alert alert-secondary px-5" role="alert">
-          <span class="text-danger">{{ errorMsg | titlecase }}</span>
+        <div class="alert alert-danger px-5" role="alert">
+          <span>{{ errorMsg | titlecase }}</span>
         </div>
       </div>
 
@@ -21,7 +21,7 @@
         [class.w-75]="set.isHandset$ | async"
       >
         <div class="form-group">
-          <label for="email" i18n>Email</label>
+          <label for="email" i18n>Email Address</label>
           <input
             (focus)="errorMsg = ''"
             type="email"
@@ -73,7 +73,10 @@
         Don't have an account?
         <span routerLink="/auth/signup">sign up</span>
       </p>
-      <span (click)="changeType('signin')" *ngIf="isReset" i18n>Login</span>
+      <p *ngIf="isReset">
+        Remember your password?
+        <span (click)="changeType('signin')" i18n>Login</span>
+      </p>
     </div>
   </div>
 </div>
