--- a/etp/src/app/modules/auth/signin/signin.component.scss
+++ b/etp/src/app/modules/auth/signin/signin.component.scss
@@ -1,31 +1,29 @@
+@import "variables.scss";
 .btn {
-  height: 35px !important;
+  height: 33px !important;
   line-height: 10px;
 }
+
 .signup p {
-  font-size: 16px;
+  font-size: 14px;
   span {
-    font-size: 16px;
     font-weight: 500;
     &:hover {
       transition: ease-in-out 0.2s;
-      font-size: 2.5vh;
+      font-size: 15px;
     }
   }
 }
 
 .info {
-  color: #888;
+  color: $secondary;
   margin: 5vh auto;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 300;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 400;
 }
-.alert {
-  margin: 0px 5vw 20px;
-  text-align: center;
-}
+
 .error {
   width: 100%;
-  line-height: 1.5;
+  line-height: 1.3;
 }
