--- a/etp/src/app/modules/auth/signup/signup.component.scss
+++ b/etp/src/app/modules/auth/signup/signup.component.scss
@@ -5,6 +5,9 @@
   width: 280px;
   margin: 5px auto 0;
 }
+.forgot p:hover {
+  color: #888;
+}
 .confirm-title {
   font-size: 20px;
   font-weight: 500;
