--- a/etp/src/app/modules/dashboard/analytics/analytics.component.scss
+++ b/etp/src/app/modules/dashboard/analytics/analytics.component.scss
@@ -1,11 +1,15 @@
 @import "variables.scss";
 .room {
-  font-size: 16px;
+  font-size: 13px;
   font-weight: 400;
+  color: #869aac;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   span {
-    color: $shade2;
-    font-size: 14px;
-    font-weight: 300;
+    color: #fff;
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 1px;
   }
 }
 .toggle {
@@ -18,7 +22,7 @@
   color: white !important;
   button {
     font-weight: 400 !important;
-    font-size: 14px;
+    font-size: 1em;
     &:hover {
       background-color: $bg1 !important;
     }
@@ -66,6 +70,7 @@
     margin: 5px;
     color: white;
     font-weight: 300;
+    letter-spacing: 1.5px;
     span,
     i {
       font-size: 1rem;
