--- a/etp/src/app/modules/dashboard/nav/nav.component.scss
+++ b/etp/src/app/modules/dashboard/nav/nav.component.scss
@@ -26,7 +26,7 @@
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 button[mat-raised-button] {
@@ -52,7 +52,7 @@ button[mat-raised-button] {
 
   #content {
     width: 100%;
-    padding: 20px;
+    padding: 20px 0;
     min-height: 100vh;
     transition: all 0.3s;
   }
