--- a/etp/src/app/modules/dashboard/overview/overview.component.html
+++ b/etp/src/app/modules/dashboard/overview/overview.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div class="container-fluid">
     <h2 class="dash-title">Overview</h2>
-    <div class="card dash-card shadow">
+    <div class="card dash-card shadow-sm">
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
