--- a/etp/src/app/modules/home/home/home.component.scss
+++ b/etp/src/app/modules/home/home/home.component.scss
@@ -12,30 +12,33 @@
   min-height: 100vh;
   color: #fff;
   max-width: 100%;
+  position: relative;
   .heading {
     margin-left: 5vw;
     margin-top: 10vh;
     padding: 20px 0 0;
     .title {
-      font-size: 5.6vh;
+      font-size: 2.7rem;
       font-weight: 400;
       line-height: 1;
       margin-top: 3%;
       text-shadow: 4px 4px 0px #0c1425, 7px 7px 0px rgba(0, 0, 0, 0.84);
     }
     p {
-      font-size: 2vh;
+      font-size: 14px;
       color: #aaa;
       font-weight: 300;
     }
   }
 
-  .line-chart {
-    margin: 5vh -5vh 0;
+  .line-charts {
+    margin: 7vh -5vh 0;
     width: 120%;
-    img {
-      padding: 10px;
-    }
+  }
+
+  .line-chart {
+    margin: 0px;
+    width: 100%;
   }
   .top-btn {
     margin: 20px auto;
@@ -56,7 +59,8 @@
       height: 4.5vh;
       width: 20vh;
       padding: 5px 10px;
-      margin: auto 7px;
+      margin: auto 10px;
+      background-color: $primary !important;
     }
   }
   .bar-pic {
@@ -69,6 +73,10 @@
 
   .bar-chart {
     color: #ccc;
+  }
+
+  .dash-cards {
+    background-color: $bg1;
   }
 }
 // --- End of Home  ---
