--- a/etp/src/app/modules/settings/devices/devices.component.html
+++ b/etp/src/app/modules/settings/devices/devices.component.html
@@ -1,5 +1,138 @@
-<div class="card dash-card">
-  <div class="card-body">
-    <p>Your Devices</p>
+<div class="dash-card shadow-sm p-2">
+  <div>
+    <p class="mt-3 mx-3">Your Devices</p>
+
+    <div class="my-5" [class.mx-5]="!(set.isHandset$ | async)">
+      <div class="row justify-content-between align-items-center mx-3 mb-5">
+        <div class="col-12 col-md-9 col-xl-7">
+          <h5 class="font-weight-normal text-secondary mb-2">
+            Device History
+          </h5>
+          <p class="mb-xl-0">
+            If you see a device here that you believe wasn’t you, please contact
+            our support account immediately.
+          </p>
+        </div>
+        <div class="col-12 col-xl-auto my-auto">
+          <button mat-raised-button class="btn btn-secondary">
+            Logout All devices
+          </button>
+        </div>
+      </div>
+
+      <div class="card dash-card">
+        <div class="card-body">
+          <!-- List group -->
+          <div class="list-group list-group-flush my-n3">
+            <div class="list-group-item">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <!-- Icon -->
+                  <i class="material-icons h1"> phone_iphone</i>
+                </div>
+                <div class="col ml-n2">
+                  <!-- Heading -->
+                  <h4 class="mb-1 list-name">
+                    iPhone 11
+                  </h4>
+
+                  <!-- Text -->
+                  <small class="text-shade">
+                    Los Angeles, CA ·
+                    <time datetime="2020-04-20T16:16">April 20 at 4:16pm</time>
+                  </small>
+                </div>
+                <div class="col-auto">
+                  <!-- Button -->
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Log out
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="list-group-item">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <!-- Icon -->
+                  <i class="material-icons h1"> desktop_mac</i>
+                </div>
+                <div class="col ml-n2">
+                  <!-- Heading -->
+                  <h4 class="mb-1 list-name">
+                    iMac OSX ·
+                    <span class="font-weight-normal">Safari 10.2</span>
+                  </h4>
+
+                  <!-- Text -->
+                  <small class="text-shade">
+                    Los Angeles, CA ·
+                    <time datetime="2020-04-20T16:16">April 20 at 4:16pm</time>
+                  </small>
+                </div>
+                <div class="col-auto">
+                  <!-- Button -->
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Log out
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="list-group-item">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <!-- Icon -->
+                  <i class="material-icons h1"> phone_iphone</i>
+                </div>
+                <div class="col ml-n2">
+                  <!-- Heading -->
+                  <h4 class="mb-1 list-name">
+                    iPhone 11
+                  </h4>
+
+                  <!-- Text -->
+                  <small class="text-shade">
+                    Los Angeles, CA ·
+                    <time datetime="2020-04-20T16:16">April 20 at 4:16pm</time>
+                  </small>
+                </div>
+                <div class="col-auto">
+                  <!-- Button -->
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Log out
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="list-group-item">
+              <div class="row align-items-center">
+                <div class="col-auto">
+                  <!-- Icon -->
+                  <i class="material-icons h1">desktop_mac</i>
+                </div>
+                <div class="col ml-n2">
+                  <!-- Heading -->
+                  <h4 class="mb-1 list-name">
+                    iMac OSX ·
+                    <span class="font-weight-normal">Safari 10.2</span>
+                  </h4>
+
+                  <!-- Text -->
+                  <small class="text-shade">
+                    Los Angeles, CA ·
+                    <time datetime="2020-04-20T16:16">April 20 at 4:16pm</time>
+                  </small>
+                </div>
+                <div class="col-auto">
+                  <!-- Button -->
+                  <button class="btn btn-sm btn-outline-secondary">
+                    Log out
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
