--- a/etp/src/app/modules/settings/login-security/login-security.component.html
+++ b/etp/src/app/modules/settings/login-security/login-security.component.html
@@ -1,5 +1,81 @@
 <div class="card dash-card">
   <div class="card-body">
     <p>Login & security</p>
+
+    <div class="mt-5 mx-3">
+      <h5 class="text-secondary font-weight-normal">
+        Change Your Password
+      </h5>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form w-100">
+            <form action="" class="w-100 d-block">
+              <div class="form-group">
+                <label for="current password">Current Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  aria-describedby="helpId"
+                />
+              </div>
+              <div class="form-group">
+                <label for="current password">New Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  aria-describedby="helpId"
+                />
+              </div>
+              <div class="form-group">
+                <label for="current password">Confirm New Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  aria-describedby="helpId"
+                />
+              </div>
+              <div class="form-group mt-5">
+                <button mat-raised-button class="btn btn-primary" type="button">
+                  update password
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="card bg-dark border ml-md-4">
+            <div class="card-body">
+              <!-- Text -->
+              <p class="mb-2">
+                Password requirements
+              </p>
+
+              <!-- Text -->
+              <p class="small text-white mb-2">
+                To create a new password, you have to meet all of the following
+                requirements:
+              </p>
+
+              <!-- List group -->
+              <ul class="small text-white pl-4 mb-3">
+                <li class="my-1">
+                  Minimum 8 character
+                </li>
+                <li class="my-1">
+                  At least one special character
+                </li>
+                <li class="my-1">
+                  At least one number
+                </li>
+                <li class="my-1">
+                  Can’t be the same as a previous password
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
