--- a/etp/src/app/modules/settings/profile-details/profile-details.component.html
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.html
@@ -2,63 +2,92 @@
   <div class="card-body">
     <p>Details</p>
 
-    <div class="form">
-      <form class="d-block w-100">
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <label for="email"> Email</label>
-          <input
-            type="email"
-            class="form-control"
-            aria-describedby="emailHelpId"
-            placeholder=""
-          />
-        </div>
-      </form>
+    <div class="mt-5 mx-3">
+      <div></div>
+
+      <div class="form w-100">
+        <form class="d-block w-100">
+          <div class="row">
+            <div class="form-group col-sm-6">
+              <label for="firstName"> First Name</label>
+              <input
+                type="text"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="lastname"> Last Name</label>
+              <input
+                type="text"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-sm-6">
+              <label for="email"> Email Address</label>
+              <input
+                type="email"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="phone Number"> Phone Number</label>
+              <input
+                type="tel"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email"> Address</label>
+            <textarea
+              type="text"
+              class="form-control"
+              aria-describedby="emailHelpId"
+              rows="3"
+            ></textarea>
+          </div>
+
+          <div class="row">
+            <div class="form-group col-sm-6">
+              <label for="TC Number"> Tc Number</label>
+              <input
+                type="text"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="Birthdate"> Birth Date</label>
+              <input
+                type="date"
+                class="form-control"
+                aria-describedby="emailHelpId"
+                placeholder=""
+              />
+            </div>
+          </div>
+          <div class="form-group mt-3 mb-0">
+            <button
+              mat-raised-button
+              class="btn btn-primary update"
+              type="button"
+            >
+              Update
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
