--- a/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
@@ -1,11 +1,11 @@
 <div class="mx-auto my-2" title="{{ options.navName | titlecase }}">
   <div
-    class="card dash-card shadow-sm"
+    class="card dash-card shadow-sm-sm"
     routerLink="/dashboard/settings/{{ options.route }}"
     routerLinkActive="active"
     [class.w-tablet]="set.isMedium$ | async"
   >
-    <div class="card-body" [class.py-1]="set.isHandset$ | async">
+    <div class="card-body" [class.py-2]="set.isHandset$ | async">
       <span class="material-icons-outlined icon">
         {{ options.icon }}
       </span>
