--- a/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
@@ -2,12 +2,12 @@
   <div class="etp sticky-top">
     <a href="#">ETP</a>
   </div>
-  <div style="background-color: #242e42;" class="sticky-top">
+  <div style="background-color: transparent;" class="sticky-top">
     <div class="sidebar-header">
       <img
         [src]="data?.avi || 'assets/img/avi.png'"
         alt="{{ data?.name }}"
-        class="img-fluid rounded-circle mb-3"
+        class="img-fluid rounded-circle mb-3 img-thumbnail"
       />
       <a class="mx-auto" routerLink="/dashboard"> {{ data?.name }} </a>
     </div>
