--- a/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.scss
+++ b/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
 
 #sidebar {
   width: 280px;
-  background: $bg2;
+  background: $darkbg;
   transition: all 0.3s;
   height: 100vh;
   position: fixed;
@@ -33,31 +33,33 @@
   }
 }
 #sidebar::-webkit-scrollbar-track {
-  border: 1px solid $bg2;
-  background-color: $bg2;
+  border: 1px solid $darkbg;
+  background-color: $darkbg;
 }
 
 #sidebar::-webkit-scrollbar {
   width: 10px;
-  background-color: $bg2;
+  background-color: $darkbg;
 }
 
 #sidebar::-webkit-scrollbar-thumb {
-  background-color: $bg2;
+  background-color: $darkbg;
   border-radius: 10px;
 }
 #sidebar.active {
   margin-left: -280px;
 }
-
+.img-thumbnail {
+  background-color: $bg1;
+  border: none !important;
+}
 #sidebar .sidebar-header {
-  padding: 20px 20px 0;
-  background: $bg2;
+  background: $darkbg;
   text-align: center;
   cursor: pointer;
-  width: 137px;
-  height: 137px;
-  margin: auto;
+  width: 120px;
+  height: 120px;
+  margin: 20px auto 5px;
   > a {
     color: $secondary;
     font-size: 18px;
@@ -81,12 +83,12 @@
 
 #sidebar ul li a {
   color: $sidetext;
-  padding: 12px 20px;
+  padding: 14px 20px;
   display: block;
-  font-size: 1rem;
+  font-size: 1.05rem;
   font-weight: 300;
   cursor: pointer;
-  margin: 10px 30px 10px 0;
+  margin: 13px 10px 13px 0;
 }
 
 #sidebarCollapse {
@@ -98,8 +100,8 @@
   background: $sidehover;
   text-decoration: none;
   border-left: 5px solid $primary;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 @media (max-width: 1050px) {
