updated button styles

--- a/etp/src/app/modules/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/modules/dashboard/analytics/analytics.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div class="container-fluid">
     <h2 class="dash-title">Analytics</h2>
-    <div class="card dash-card mb-2 shadow">
+    <div class="card dash-card mb-2 shadow-sm">
       <div class="card-body">
         <div class="row">
           <div class="col-lg-4 col-md-5 col-sm-6">
