--- a/etp/src/app/modules/settings/login-security/login-security.component.html
+++ b/etp/src/app/modules/settings/login-security/login-security.component.html
@@ -35,7 +35,11 @@
                 />
               </div>
               <div class="form-group mt-5">
-                <button mat-raised-button class="btn btn-primary" type="button">
+                <button
+                  mat-raised-button
+                  class="text-primary px-4"
+                  type="button"
+                >
                   update password
                 </button>
               </div>
