--- a/etp/src/app/modules/settings/payment-options/payment-options.component.html
+++ b/etp/src/app/modules/settings/payment-options/payment-options.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-auto">
         <!-- Button -->
-        <button mat-raised-button class="btn add btn-primary">
+        <button mat-raised-button class="add">
           Add method
         </button>
       </div>
@@ -44,7 +44,7 @@
           <div class="col-auto mr-n3">
             <!-- Badge -->
             <span
-              class="badge badge-success font-weight-normal px-2"
+              class="badge badge-primary font-weight-normal px-2"
               *ngIf="item.status === 'default'"
             >
               Default
