--- a/etp/src/app/modules/settings/login-security/login-security.component.scss
+++ b/etp/src/app/modules/settings/login-security/login-security.component.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 label {
   color: white;
 }
@@ -10,4 +11,9 @@ label {
 }
 li {
   list-style-type: disc;
+}
+button {
+  background-color: $grey;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
