--- a/etp/src/app/modules/settings/profile-details/profile-details.component.html
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.html
@@ -78,11 +78,7 @@
             </div>
           </div>
           <div class="form-group mt-3 mb-0">
-            <button
-              mat-raised-button
-              class="btn btn-primary update"
-              type="button"
-            >
+            <button mat-raised-button class="text-primary px-4" type="button">
               Update
             </button>
           </div>
