updated settings functionality

--- a/etp/src/app/modules/home/home/home.component.scss
+++ b/etp/src/app/modules/home/home/home.component.scss
@@ -60,6 +60,7 @@
       width: 20vh;
       padding: 5px 10px;
       margin: auto 10px;
+      border-radius: 2px !important;
       background-color: $primary !important;
     }
   }
