--- a/etp/src/app/modules/settings/login-security/login-security.component.scss
+++ b/etp/src/app/modules/settings/login-security/login-security.component.scss
@@ -16,4 +16,6 @@ button {
   background-color: $grey;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+  height: 30px;
+  line-height: 1;
 }
