--- a/etp/src/app/modules/settings/profile-details/profile-details.component.html
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.html
@@ -3,10 +3,56 @@
     <p>Details</p>
 
     <div class="mt-5 mx-3">
-      <div></div>
+      <div class="row justify-content-between align-items-center">
+        <div class="col">
+          <div class="row align-items-center">
+            <div class="col-auto">
+              <!-- Avatar -->
+              <div class="avatar">
+                <img
+                  class="img-fluid rounded-circle img-thumbnail"
+                  [src]="previewAvi || data.avi"
+                  alt="avatar"
+                />
+              </div>
+            </div>
+            <div class="col ml-n2">
+              <!-- Heading -->
+              <h5 class="mb-1 font-weight-normal">
+                Your avatar
+              </h5>
 
+              <!-- Text -->
+              <small class="text-muted">
+                PNG or JPG no bigger than 1000px wide and tall.
+              </small>
+            </div>
+          </div>
+          <!-- / .row -->
+        </div>
+        <div class="col-auto">
+          <!-- Button -->
+          <button mat-stroked-button class="btn btn-sm">
+            Upload
+            <input
+              type="file"
+              accept="image/*"
+              (change)="upload($event)"
+              style="
+                opacity: 0;
+                width: 100%;
+                position: absolute;
+                left: 0;
+                cursor: pointer;
+              "
+            />
+          </button>
+        </div>
+      </div>
+
+      <hr class="my-3" />
       <div class="form w-100">
-        <form class="d-block w-100">
+        <form class="d-block w-100" [formGroup]="profileForm">
           <div class="row">
             <div class="form-group col-sm-6">
               <label for="firstName"> First Name</label>
@@ -15,6 +61,7 @@
                 class="form-control"
                 aria-describedby="emailHelpId"
                 placeholder=""
+                formControlName="name"
               />
             </div>
             <div class="form-group col-sm-6">
@@ -24,6 +71,7 @@
                 class="form-control"
                 aria-describedby="emailHelpId"
                 placeholder=""
+                formControlName="surname"
               />
             </div>
           </div>
@@ -54,6 +102,7 @@
               class="form-control"
               aria-describedby="emailHelpId"
               rows="3"
+              formControlName="address"
             ></textarea>
           </div>
 
@@ -77,8 +126,13 @@
               />
             </div>
           </div>
-          <div class="form-group mt-3 mb-0">
-            <button mat-raised-button class="text-primary px-4" type="button">
+          <div class="form-group mt-3 mb-2">
+            <button
+              (click)="update()"
+              mat-raised-button
+              class="text-primary px-4"
+              type="button"
+            >
               Update
             </button>
           </div>
