--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -118,6 +118,7 @@ p {
   line-height: 1;
   .btn {
     background-color: $primary !important;
+    border-radius: 2px !important;
   }
   .title {
     font-size: 1.7rem;
