--- a/etp/src/app/modules/settings/profile-details/profile-details.component.html
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.html
@@ -11,7 +11,7 @@
               <div class="avatar">
                 <img
                   class="img-fluid rounded-circle img-thumbnail"
-                  [src]="previewAvi || data.avi"
+                  [src]="previewAvi || avi"
                   alt="avatar"
                 />
               </div>
