--- a/etp/src/app/modules/snippets/dashboard-nav/profilebar/profilebar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/profilebar/profilebar.component.html
@@ -32,7 +32,7 @@
   <button mat-menu-item>
     <i class="fa fa-cog pr-2" aria-hidden="true"></i> Settings
   </button>
-  <button mat-menu-item (click)="logout()">
+  <button mat-menu-item (click)="asAuth.logout()">
     <i class="fas fa-sign-out-alt pr-2"></i> Logout
   </button>
 </mat-menu>
