--- a/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
   <div style="background-color: transparent;" class="sticky-top">
     <div class="sidebar-header">
       <img
-        [src]="data?.avi || 'assets/img/avi.png'"
+        [src]="data?.image || 'assets/img/avi.png'"
         alt="{{ data?.name }}"
         class="img-fluid rounded-circle mb-3 img-thumbnail"
       />
