--- a/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/stickybar/stickybar.component.html
@@ -42,7 +42,7 @@
 >
   <div class="item">
     <div class="quota">
-      {{ data?.pv }} <span class="text-secondary">KWH</span>
+      {{ data?.installedPower.pv }} <span class="text-secondary">KWH</span>
     </div>
   </div>
 </div>
