--- a/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/topmenu/topmenu.component.html
@@ -16,7 +16,7 @@
       <div class="h-50 w-25 mx-2">
         <img src="/assets/svg/panel.svg" alt="panel" class="img-fluid" />
       </div>
-      <span>{{ data?.pv }}</span>
+      <span>{{ data?.installedPower.pv }}</span>
       <span class="subs">KWH</span>
     </div>
   </div>
