--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
@@ -3,11 +3,10 @@
   <div class="container">
     <div class="form">
       <div class="error d-block w-auto" *ngIf="errorMsg">
-        <div class="alert alert-secondary px-5" role="alert">
-          <span class="text-danger" i18n>{{ errorMsg | titlecase }}</span>
+        <div class="alert alert-danger px-5" role="alert">
+          <span i18n>{{ errorMsg | titlecase }}</span>
         </div>
       </div>
-
       <form
         [formGroup]="regForm"
         class="d-block"
@@ -17,27 +16,67 @@
         <div>
           <div class="form-group">
             <label for="telephone" i18n>Phone Number</label>
-            <input type="tel" class="form-control" formControlName="phone" />
+            <input
+              [class.is-invalid]="Phone.invalid && Phone.touched"
+              type="tel"
+              class="form-control"
+              formControlName="phone"
+            />
           </div>
           <div class="form-group">
             <label for="address" i18n>Address</label>
-            <textarea
-              class="form-control"
-              formControlName="address"
-              rows="2"
-            ></textarea>
+            <input class="form-control" formControlName="address" type="text" />
+          </div>
+          <div class="row">
+            <div class="col-6 ml-auto">
+              <div class="form-group">
+                <label for="city" i18n>City</label>
+                <input
+                  [class.is-invlaid]="City.invalid && City.touched"
+                  class="form-control"
+                  formControlName="city"
+                  type="text"
+                />
+              </div>
+            </div>
+            <div class="col-6 mr-auto">
+              <div class="form-group">
+                <label for="state" i18n>State</label>
+                <input
+                  [class.is-invalid]="State.invalid && State.touched"
+                  class="form-control"
+                  formControlName="state"
+                  type="text"
+                />
+              </div>
+            </div>
           </div>
           <div class="form-group">
             <label for="EI number" i18n>Electric Invoice Number</label>
-            <input type="number" class="form-control" formControlName="eiNum" />
+            <input
+              [class.is-invalid]="EiNum.invalid && EiNum.touched"
+              type="number"
+              class="form-control"
+              formControlName="eiNum"
+            />
           </div>
           <div class="form-group">
             <label for="TC number" i18n>TC Number</label>
-            <input type="number" class="form-control" formControlName="tcNum" />
+            <input
+              type="number"
+              [class.is-invalid]="TcNum.touched && TcNum.invalid"
+              class="form-control"
+              formControlName="tcNum"
+            />
           </div>
           <div class="form-group">
             <label for="Birth Date" i18n>Birth Date</label>
-            <input type="date" class="form-control" formControlName="bDate" />
+            <input
+              type="date"
+              [class.is-invalid]="BDate.invalid && BDate.touched"
+              class="form-control"
+              formControlName="bDate"
+            />
           </div>
         </div>
         <button
@@ -45,13 +84,14 @@
           type="button"
           class="btn btn-block mt-3"
           type="submit"
+          (click)="submit()"
           i18n
         >
           COMPLETE MY ACCOUNT
         </button>
       </form>
     </div>
-    <div class="signup mb-2">
+    <div class="signup mb-2 mt-4">
       <span routerLink="/auth/signin" i18n>Not now</span>
     </div>
   </div>
