--- a/etp/src/app/modules/auth/signup/signup.component.html
+++ b/etp/src/app/modules/auth/signup/signup.component.html
@@ -45,7 +45,7 @@
         [class.w-50]="!(set.isHandset$ | async)"
         [class.w-75]="set.isHandset$ | async"
       >
-        <div formGroupName="register">
+        <div>
           <div class="form-group">
             <label for="email" i18n>Email Address</label>
             <input
@@ -90,7 +90,11 @@
         </button>
       </form>
     </div>
-    <div class="forgot d-block w-75 text-left px-4" *ngIf="!signedUp">
+    <div
+      class="forgot d-block w-75 text-left"
+      [class.px-4]="!(set.isHandset$ | async)"
+      *ngIf="!signedUp"
+    >
       <p i18n class="font-weight-normal">
         By clicking sign up, you agree to the Solar Bankers User Agreement,
         Privacy Policy, and Cookie Policy.
