--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -1,38 +1,3 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$etp-primary: mat-palette($mat-indigo);
-$etp-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$etp-warn: mat-palette($mat-red);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$etp-theme: mat-light-theme((
-  color: (
-    primary: $etp-primary,
-    accent: $etp-accent,
-    warn: $etp-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($etp-theme);
-
 @import "variables.scss";
 
 /* You can add global styles to this file, and also import other style files */
@@ -58,38 +23,8 @@ $etp-warn: mat-palette($mat-red);
 // Create the theme object (a Sass map containing all of the palettes).
 $etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include angular-material-theme($etp-theme);
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import "~@angular/material/theming";
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$etp-primary: mat-palette($mat-indigo);
-$etp-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$etp-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-
-@include angular-material-theme($etp-theme);
 $enable-grid-classes: false;
 $primary: #1f8efa;
 $secondary: #657d95;
@@ -318,5 +253,11 @@ p {
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
